# filebuffer

./: .appveyor.yml  .travis.yml  Cargo.toml  build.rcl  changelog.md  contributing.md  readme.md  rust-toolchain.toml
.github/workflows/: build.yml
examples/: head.rs  sha256sum_filebuffer.rs  sha256sum_naive.rs  sha256sum_streambuffer.rs
src/: lib.rs  macos.rs  unix.rs  windows.rs
