[package]
name = "filebuffer"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
license = "Apache-2.0"
readme = "readme.md"
keywords = ["non-blocking", "mmap", "file", "input", "prefetch"]
description = "Fast and simple file reading"
repository = "https://github.com/ruuda/filebuffer"
documentation = "https://docs.rs/filebuffer"

[dependencies]
# TODO: Depend only on libc for Unix-like platforms,
# and on winapi on Windows once RFC 1361 lands.
# https://github.com/rust-lang/rfcs/blob/master/text/1361-cargo-cfg-dependencies.md
libc = "0.2.6"
kernel32-sys = "0.2.1"
winapi = "0.2.5"

[dev-dependencies]
rust-crypto = "0.2.34"

# Version 0.3.36 of the gcc crate (a dependency of rust-crypto) breaks backwards
# compatibility with Rust 1.4 through 1.6, so force a less recent version. This
# is only for building the application, so dependencies of Filebuffer are not
# affected by this override.
gcc = "= 0.3.35"
