[package]
name = "filebuffer"
version = "1.0.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
license = "Apache-2.0"
readme = "readme.md"
keywords = ["non-blocking", "mmap", "file", "input", "prefetch"]
categories = ["asynchronous", "filesystem", "memory-management"]
description = "Fast and simple file reading"
repository = "https://github.com/ruuda/filebuffer"
documentation = "https://docs.rs/filebuffer"
edition = "2018"

[target.'cfg(unix)'.dependencies]
libc = "0.2.86"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "memoryapi", "processthreadsapi", "sysinfoapi", "winnt"] }

[dev-dependencies]
rust-crypto = "0.2.36"
